--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Page not found · GitHub Pages</title>
     <script>
-      if (["/blogs"].includes(location.pathname)) {
+      if (["/blogs/"].includes(location.pathname)) {
         sessionStorage.redirect = location.href;
         location.replace("/");
       }
@@ -54,7 +54,6 @@
       }
 
     </style>
-    <link rel="stylesheet" href="./css/blank.css"/>
   </head>
   <body>
 
